--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,6 @@
 /**
  * Use this file to import partials.
- * Do not include SCSS code in this file.
+ * Do not include SASS code in this file.
  */
 
 /**
@@ -15,6 +15,12 @@
  * see commented examples below
  */
 
+@import "@fortawesome/fontawesome-free/css/all.css";
+//imports para tailwind
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
 
@@ -24,6 +30,7 @@
  */
 
 @import "layouts/home";
+@import "layouts/grupo";
 
 /**
  * Do NOT include anything else in this file!
